[gd_scene load_steps=15 format=3 uid="uid://bj5xdkxodshha"]

[ext_resource type="Script" path="res://player_one.gd" id="1_uww15"]
[ext_resource type="Texture2D" uid="uid://p0xsi4shtxjd" path="res://sprites/ships_player/player_ship_1.png" id="2_d87k3"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="3_q6wun"]
[ext_resource type="Script" path="res://scripts/components/movement_component.gd" id="4_cvhm4"]
[ext_resource type="Script" path="res://scripts/components/combat_component.gd" id="5_xrncw"]
[ext_resource type="Script" path="res://scripts/components/resource_component.gd" id="6_6v4gj"]
[ext_resource type="Script" path="res://scripts/components/explode_fire_component.gd" id="7_h4r02"]
[ext_resource type="Script" path="res://scripts/core/state_machine.gd" id="8_hgyft"]
[ext_resource type="Script" path="res://scripts/states/player_state_normal.gd" id="9_4qigj"]
[ext_resource type="Script" path="res://scripts/states/player_state_immobilized.gd" id="10_kqnct"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6hru3"]
radius = 15.0

[sub_resource type="Gradient" id="Gradient_mklkp"]
offsets = PackedFloat32Array(0, 0.133333, 0.474074, 0.777778, 1)
colors = PackedColorArray(1, 0.886275, 0, 1, 1, 0.6, 0, 1, 0.858824, 0.223529, 0, 0.686275, 0.454902, 0.137255, 0, 0.235294, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5gciq"]
gradient = SubResource("Gradient_mklkp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_w4kvs"]
emission_shape = 1
emission_sphere_radius = 2.0
particle_flag_disable_z = true
spread = 15.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 70.0
angular_velocity_min = -90.0
angular_velocity_max = 90.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 1.5
scale_max = 3.0
color_ramp = SubResource("GradientTexture1D_5gciq")

[node name="PlayerOne" type="RigidBody2D"]
collision_mask = 32
mass = 4.0
gravity_scale = 0.0
can_sleep = false
linear_damp = 0.1
angular_damp = 1.0
script = ExtResource("1_uww15")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6hru3")

[node name="RotationHelper" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_d87k3")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="HealthBar" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -30.0
offset_right = 20.0
offset_bottom = -26.0
color = Color(0, 0.8, 0, 1)

[node name="ThrusterParticles" type="GPUParticles2D" parent="."]
position = Vector2(-12, 0)
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_w4kvs")
lifetime = 0.8
explosiveness = 0.1
randomness = 0.2
local_coords = true
trail_enabled = true
trail_lifetime = 0.1

[node name="EngineAudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = -15.0
max_distance = 300.0
attenuation = 2.0
bus = &"Effects"

[node name="WeaponAudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0
max_distance = 400.0
attenuation = 2.0
bus = &"Effects"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_q6wun")
invulnerability_time = 1.5

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("4_cvhm4")

[node name="CombatComponent" type="Node" parent="."]
script = ExtResource("5_xrncw")
is_player_weapon = true

[node name="ResourceComponent" type="Node" parent="."]
script = ExtResource("6_6v4gj")

[node name="ExplodeFireComponent" type="Node" parent="."]
script = ExtResource("7_h4r02")
explosion_scale = 1.5
explosion_duration_multiplier = 1.2
screen_shake_intensity = 10.0
screen_shake_duration = 0.4

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("8_hgyft")

[node name="Normal" type="Node" parent="StateMachine"]
script = ExtResource("9_4qigj")

[node name="Immobilized" type="Node" parent="StateMachine"]
script = ExtResource("10_kqnct")